# cpp_mhrd

./: .gitignore  .mhrd_progress.json  CMakeLists.txt  DEPLOYMENT.md  GAME_README.md  PACKAGING_CHECKLIST.md  PPA_QUICK_START.md  README.md
.kanbn_boards/kanban/.kanbn/: index.md
.kanbn_boards/kanban/.kanbn/tasks/: base-game-creation.md  base-ui-improvements.md  base-ux-improvements.md  better-ide.md  deployment-instructions.md
debian/: changelog  control  copyright  debhelper-build-stamp  install  rules
debian/minlab/DEBIAN/: control  md5sums
debian/minlab/usr/share/minlab/levels/: level01.json  level03.json
debian/source/: format
docs/: PACKAGING_SUMMARY.md  PUBLISH_TO_PPA.md  TEST_INSTALLATION.md  UX_IMPROVEMENTS.md
examples/: not.hdl
levels/: level02.json  level04.json  level05.json
scripts/: build-package.sh  upload-ppa.sh
src/: component_designer.cpp  component_designer.h  component_library.cpp  component_library.h  game.cpp  game.h  level_editor.cpp  level_editor.h  mhrd_cli.cpp  minlab.cpp  simulator.cpp  simulator.h  syntax_checker.cpp  syntax_checker.h  terminal_ui.cpp  terminal_ui.h  terminal_ui_test.cpp  terminal_ui_test.h
tests/: README.md  level01_solution.hdl  level02_solution.hdl  level03_solution.hdl  level04_solution.hdl  level05_solution.hdl  run_tests.sh  test_editor_integration.cpp  test_ui_controls.cpp
